--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
 
         <activity android:name=".MenuActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDgo1rnhvqTP-87oCSyYROPtw_KMcwhYj4"/>
+
     </application>
 
 </manifest>
