--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
+
 }
